k8s-resources/webapp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: udacity-weather-app
  namespace: udacity-weather-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-05e1c98ed0f5b109e,subnet-07f5bb81f661df61b,subnet-0a4e6232630820516
spec:
  rules:
    - host: weather.pools.ac
      http:
        paths:
          - path: /
            backend:
              serviceName: udacity-weather-app
              servicePort: 80
